# education

./: .clang-format  .gitignore  README.md  TESTTESTTEST.txt
C/: Echo.c  alloc.c  command line.c  qsort.c
C++/Algorithms/: bubble sort.cpp  choice sort.cpp  insert sort.cpp
C++/All shit/: Ask server time.cpp  Avtobus stops no reply.cpp  Avtobus stops numeration.cpp  Avtobus stops.cpp  Class Rational.cpp  Class array, Swap trik.cpp  Class first second name upgrade 2.cpp  Class first second name upgrade.cpp  Class name and second name.cpp  Class reverse.cpp  Class sort strings.cpp  ClassesTraning.cpp  Directory country-capital.cpp  Example of inheritance, constr destr, call.cpp  Exceptions ensure equal.cpp  Explicit.cpp  For_each.cpp  Fstream Ostream.cpp  Iomainip.cpp  Lambda function.cpp  LinkedListTraning.cpp  Matrix sum.cpp  Planner.cpp  Polindrom.cpp  Rational null excep operation.cpp  Rational null excep.cpp  Serialize_Deserialize.cpp  Shared_ptr.cpp  Singleton Meyers.cpp  Sort abs.cpp  Sort two string.cpp  Student list.cpp  Synonims.cpp  Test virtual func.cpp  Traning Test virtual func.cpp  Void pointer.cpp  calc_for_my_hours.cpp  lock_free_stack.cpp  shared_ptr.cpp
C++/Books/Boost application development in C++ Polukhin/: CMakeLists.txt  Makefile  README.md  any.cpp  program_options.cpp  variant.cpp
C++/Data struct/: LinkedList.cpp  Queue(upgrade).cpp  Queue.cpp  Stack.cpp
C++/Kafka/: kafka.cpp
C++/Leetcode/: apple_redistribution_into_boxes.cpp  best_time_to_buy_and_sell.cpp  best_time_to_buy_and_sell_stock.cpp  build.sh  container_with_most_water.cpp  invert_binary_tree.cpp  longest_substring_without_repeating_char.cpp  merge_intervals.cpp  merge_two_sorted_lists.cpp  p.hpp  partition_labels.cpp  squares_sorted_array.cpp  two_sum.cpp  two_sum_O1.cpp  valid_palindrome.cpp  valid_parentheses.cpp
C++/MyString on C++/: MyString.sln
C++/Patterns on C++/: Abstract Factory.cpp  Adapter.cpp  Bridge.cpp  Builder.cpp  Chain_of_responsibility.cpp  Command.cpp  Composite.cpp  Decorator.cpp  Facade.cpp  Factory Method People.cpp  Factory_method.cpp  Flyweight.cpp  Iterator.cpp  Mediator.cpp  Memento.cpp  Observer Four Gang.cpp  Observer.cpp  Prototype.cpp  Proxy.cpp  Singleton.cpp  State.cpp  Strategy Four Gang.cpp  Strategy.cpp  Strategy_four_gang.cpp  Template_method.cpp  Visitor.cpp  ex
C++/STL-std/: Adapters container(priority queue, queue).cpp  Adapters container(stack).cpp  Algorithm(accumulate).cpp  Algorithm(copy, copy_if).cpp  Algorithm(equal predicate).cpp  Algorithm(equal, mismatch).cpp  Algorithm(find, find_if, find_if_not).cpp  Algorithm(for_each).cpp  Algorithm(max_element).cpp  Algorithm(random_shuffle).cpp  Algorithm(remove, remove_if).cpp  Algorithm(sort).cpp  Algorithm(unique).cpp  Array.cpp  Deque.cpp  Forward_list.cpp  Function.cpp  Iterators.cpp  List.cpp  Map Multimap.cpp  Override operators.cpp  Set Multiset.cpp  Vector.cpp
C++/Srot on C++/: bubble_sort.cpp  choise_sort.cpp  insert sort.cpp
C++/The C++ programming language/: Ex (2.7) 10.cpp  Ex (2.7) 3.cpp  Ex (2.7) 4.cpp  Ex (2.7) 6.cpp  Ex (2.7) 7.cpp  Ex (2.7) 8.cpp  Ex (3.5) 12.cpp  Ex (3.5) 3.cpp  Ex (3.5) 7.cpp  Ex (3.5) 8.cpp  Ex (3.5) 9.cpp  Ex (4.8) 1.cpp  Ex (4.8) 3.cpp
C++/Threads/: Thread 1.cpp  Thread 12 unique_lock mutex, unique_lock vs lock_guard.cpp
C++/Topics C plus plus/: Topic 10 (Pointer) 12 Linked list.cpp  Topic 10 (Pointer) 13 Pointer on pointer.cpp  Topic 10 (Pointer) 15 Horse racing.cpp  Topic 10 (Pointer) 2 Pointers and functions, passing a simple variable.cpp  Topic 10 (Pointer) 6 String copy with pointer help.cpp  Topic 10 (Pointer) 7 Array pointer on string.cpp  Topic 10 (Pointer) 9 String class with NEW.cpp  Topic 11 (Virtual Function) 10 Assignment statement overload.cpp  Topic 11 (Virtual Function) 13 this.cpp  Topic 11 (Virtual Function) 15 String with memory savings.cpp  Topic 11 (Virtual Function) 16 dynamic_cast.cpp  Topic 11 (Virtual Function) 17 dynamic_cast change type pointer with help DC.cpp  Topic 11 (Virtual Function) 18 typeid.cpp  Topic 11 (Virtual Function) 2 Upgrade Access to default methods from pointer.cpp  Topic 11 (Virtual Function) 3 Pure virtual function.cpp  Topic 11 (Virtual Function) 4 Pure virtual function EXAMPLE.cpp  Topic 11 (Virtual Function) 7 Friend-function.cpp  Topic 11 (Virtual Function) 9 Static function.cpp  Topic 12 (Streams And Files) 1 Example input control.cpp  Topic 12 (Streams And Files) 11 Many objects.cpp  Topic 12 (Streams And Files) 14 Errors2.cpp  Topic 12 (Streams And Files) 17 Streams overload.cpp  Topic 12 (Streams And Files) 18 Streams overload for files.cpp  Topic 12 (Streams And Files) 19 Memory like stream.cpp  Topic 12 (Streams And Files) 2 Formatted output to file.cpp  Topic 12 (Streams And Files) 3 Read data from file.cpp  Topic 12 (Streams And Files) 4 Output String with spaces.cpp  Topic 12 (Streams And Files) 9 Object load on disk.cpp  Topic 14 (Templates and exceptions) 1 Example of use.cpp  Topic 14 (Templates and exceptions) 3 Template of class.cpp  Topic 14 (Templates and exceptions) 5 Linked list with template.cpp  Topic 14 (Templates and exceptions) 7 More exceptions.cpp  (+66 more)
C++/threads_sorokin/: CMakeLists.txt  run.sh  thread.cpp  thread10_cancellation_stop.cpp  thread2.cpp  thread3_defer_lock.cpp  thread4_concurrent_queue.cpp  thread5_condition_var.cpp  thread6_accounts_atomic.cpp  thread7_mutex.cpp  thread8_mutex_waiters.cpp  thread9_cancellation_naive.cpp
CMake/: CMakeLists.txt
CMake/ExampleWithMyLib/: CMakeLists.txt  main.cpp
CMake/ExampleWithMyLib/clientlib/: CMakeLists.txt  client.cpp  client.h
CMake/ex2/: CMakeLists.txt  main.cpp  version.cpp  version.h
CMake/ex3/: CMakeLists.txt  main.cpp  version.cpp  version.h
CMake/ex4/: CMakeLists.txt
CMake/ex4/lib/: CMakeLists.txt  lib.cpp  lib.h
CMake/ex4/src/: CMakeLists.txt  main.cpp
CMake/ex5/src/: CMakeLists.txt  config.h.in  main.cpp
CMake/ex5/sumLib/: CMakeLists.txt  sumLib.cpp  sumLib.h
CMake/ex6/: CMakeLists.txt
CMake/ex6/cmake/: FindsumLib.cmake
CMake/ex7/: CMakeLists.txt  main.cpp  some.h
С++/: Функц фишки с++.txt
(+981 files in other folders)
